# versioned_collection

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  VERSION  codecov.yaml  data.json  noxfile.py  pyproject.toml  requirements.txt  setup.py
.ci/: should_bump_version.py  update_version.py
.github/: CODEOWNERS  dependabot.yaml  dependabot.yml  release-drafter.yaml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml  support-request.yml
.github/actions/tag_version/: action.yaml
.github/actions/test_and_build/: action.yaml
.github/workflows/: auto_bump_on_merge.yml  build.yml  build_docs.yml  bump_version.yml  check_pr_labels.yml  coverage_report.yml  pr.yaml  release.yaml  run_tests.yml
cli/: cli.py
docs/: Makefile  requirements.txt
docs/source/: command_line.rst  conf.py  index.rst  modules.rst  versioned_collection.collection.rst  versioned_collection.collection.tracking_collections.base.rst  versioned_collection.collection.tracking_collections.branches.rst  versioned_collection.collection.tracking_collections.conflicts.rst  versioned_collection.collection.tracking_collections.deltas.rst  versioned_collection.collection.tracking_collections.lock.rst  versioned_collection.collection.tracking_collections.logs.rst  versioned_collection.collection.tracking_collections.metadata.rst  versioned_collection.collection.tracking_collections.modified.rst  versioned_collection.collection.tracking_collections.replica.rst  versioned_collection.collection.tracking_collections.rst  versioned_collection.collection.tracking_collections.stash.rst  versioned_collection.collection.versioned_collection.rst  versioned_collection.errors.rst  versioned_collection.listener.rst  versioned_collection.rst  versioned_collection.tree.rst
docs/source/_static/: stylesheet.css
docs/source/notes/: internals.rst  versioning_system.rst
docs/source/tutorials/: basics.rst  getting_started.rst  introduction.rst
scripts/: build_docs.sh  run_tests.sh
tests/: don_test_versioned_collection_integration.py  test_event_reduction.py  test_tree.py  test_versioned_collection_integration.py
tests/misc/: test_event_reduction.py  test_tree.py
tests/test_tracking_collection/: in_memory_database.py  test_base.py  test_branches.py  test_deltas.py  test_lock.py  test_log.py  test_metadata.py  test_modified.py  test_replica.py  test_stash.py
tests/test_versioned_collection/: common.py  test_basics.py  test_branching.py  test_checkout.py  test_delete.py  test_diff.py  test_discard_changes.py  test_drop.py  test_equality.py  test_init.py  test_log.py  test_pull.py  test_push.py  test_register.py  test_rename.py  test_stash.py
tests/tracking_collection/: test_base.py  test_branches.py  test_metadata.py  test_modified.py  test_replica.py  test_stash.py
tests/versioned_collection/: test_diff.py  test_discard_changes.py  test_equality.py  test_rename.py
vc_cli/: cli.py
versioned_collection/: __init__.py  errors.py  listener.py  tree.py  version.py
versioned_collection/collection/: __init__.py  versioned_collection.py
versioned_collection/collection/tracking_collections/: __init__.py  base.py  branches.py  conflicts.py  deltas.py  lock.py  logs.py  metadata.py  modified.py  replica.py  stash.py
versioned_collection/utils/: data_structures.py  events.py  mongo_query.py  multi_processing.py  serialization.py
