[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.36.1"]
build-backend = "setuptools.build_meta"

[project]
name = "versioned_collection"
description = "MongoDB collection versioning and tracking in Python."
license = { text = "Apache License 2.0" }
keywords = ["mongodb", "collection", "collection version control"]
dynamic = ["version", "dependencies"]
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]
readme = "README.md"
authors = [
    { name = "Humanising Autonomy", email = "info@humanisingautonomy.com" },
    { name = "Victor Apostol" },
]

[project.optional-dependencies]
tests = [
    "coverage>=6.5.0",
]

[project.urls]
"Source code" = "https://github.com/HumanisingAutonomy/versioned_collection"

[project.scripts]
vc = "cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["versioned_collection*"]
exclude = ["tests*", "cli*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

