[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel>=0.36.1",
    "setuptools-git-versioning>=2.0,<3",
]
build-backend = "setuptools.build_meta"

[project]
name = "versioned_collection"
description = "MongoDB collection versioning and tracking in Python."
license = { text = "Apache License 2.0" }
keywords = ["mongodb", "collection", "collection version control"]
dynamic = ["version", "dependencies"]
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]
readme = "README.md"
authors = [
    { name = "Humanising Autonomy", email = "info@humanisingautonomy.com" },
    { name = "Victor Apostol" },
]

[project.optional-dependencies]
build = ["build", "twine", "toml"]
tests = ["coverage[toml]>=7.0.0", "pymongo-inmemory"]
lint = [
    "pyink==23.10.0",
    "darglint",
    "flake8",
    "flake8-bandit",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-isort",
    "isort",
    "pep8-naming",
    "pydocstyle",
    "restructuredtext_lint",
]
documentation = [
    "sphinx~=8.0.2",
    "furo>=2023.5.20,<2024.6.0",
    "sphinxcontrib-pseudocode@git+https://github.com/victorapostol/sphinxcontrib-pseudocode",
    "sphinxcontrib-katex~=0.9",
]

[project.urls]
"Source code" = "https://github.com/HumanisingAutonomy/versioned_collection"

[project.scripts]
vc = "vc_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["versioned_collection*", "vc_cli*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools-git-versioning]
enabled = true


[tool.black]
line-length = 80
skip-string-normalization = true

[tool.pyink]
line-length = 80
skip-string-normalization = true
